# university-labs-archive

./: .gitmodules  README.md  readme.md
01/LAB I/: core.cpp
01/LAB V/: main.cpp
01/code-review-debug/: source.cpp  source_commented.cpp  source_remastered copy(old).cpp  task.cpp
01/code-review-release/: (Backup)code-review-release.7z  README.md  source.cpp  source_remastered.cpp
02/lab-3/: main.cpp
03/lab-dynamic-structures/: main.cpp
03/lab-functions/: main.cpp
04/abstract/: abstract-copy.tex  abstract.aux  abstract.tex  abstract.toc  javaabstract.kilepr
04/lab-1/: .gitmodules  CMakeLists.txt  README.md  main.cpp
04/lab-1/GoogleUnitTests/: CMakeLists.txt
04/lab-1/GoogleUnitTests/Tests/: matrix-test.cpp
04/lab-1/Headers/: EquationMatrix.h  Gauss.h  InconsistencyVector.h  LdlFactorization.h  Matrix.h  RelativeError.h
04/lab-1/Sources/: EquationMatrix.cpp  Gauss.cpp  InconsistencyVector.cpp  LdlFactorization.cpp  Matrix.cpp  RelativeError.cpp
04/lab-2/: .gitignore  CMakeLists.txt  Main.cpp  README.md  matrix.prn
04/lab-3/: EulerMethods.py  Examples.py  Main.py
04/lab-4/: main.py
04/lab-5/: main.py
04/sat-telemetry/: main.py
ext/04/: Project1.cbproj  Project1.cbproj.local  Project1.cpp  Unit1.cpp  Unit1.dfm  Unit1.h
ext/05/: Project1.cbproj  Project1.cbproj.local  Unit1.dfm  Unit1.h
ext/06/: Project1.cbproj  Project1.cbproj.local  Project1.cpp  Project1.res  Unit1.dfm  Unit1.h
ext/07/: Project1.cbproj  Project1.cbproj.local  Project1.res  Unit1.cpp  Unit1.dfm  Unit1.h  Unit1.vlb
ext/08/: Project1.cbproj  Project1.cbproj.local  (+2 more)
(+199 files in other folders)
